<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
    	android:gravity="center_vertical|center_horizontal"
	    android:text="@string/appInfo" android:textStyle="bold" android:textSize="13pt" android:typeface="sans" android:shadowDx="1.2" android:shadowDy="1.2" android:textColor="#333" android:background="#DDD" android:shadowRadius="2.0" android:shadowColor="#666" android:padding="20px"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="12px">
		<ImageView
			android:id="@+id/ImageView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" android:src="@drawable/logoklein">
			</ImageView>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent" android:padding="20px" android:paddingTop="13px">
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/authInfo"/>
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/revInfo"
			    />
		</LinearLayout>
	</LinearLayout>
	<TextView  
		android:id="@+id/myStartStopServiceButton" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
    	android:gravity="center_vertical|center_horizontal"
	    android:padding="20px" android:text="@string/StartService"/>
	<TextView  
		android:id="@+id/myPreferenceButton" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/Preferences" 
    	android:gravity="center_vertical|center_horizontal"
	    android:padding="20px"/>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="Last command reveived:" 
	    android:padding="20px"/>
	<TextView  
		android:id="@+id/lastCommand" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/Preferences" 
    	android:gravity="center_vertical|center_horizontal"
	    android:padding="20px"/>
</LinearLayout>
